k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: sample-php
  name: sample-php
