k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-php
  name: sample-php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-php
  template:
    metadata:
      labels:
        app: sample-php
    spec:
      containers:
        - name: sample-php
          image: quay.io/gfontana/sample-php:latest
#          image: quay.io/gfontana/sample-php:v1.0          
          imagePullPolicy: IfNotPresent          
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "500m"
