k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-php
  name: sample-php
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: sample-php
