k8s/route.yaml
kind: Route
apiVersion: v1
metadata:
  name: sample-php
  labels:
    app: sample-php
spec:
  to:
    kind: Service
    name: sample-php
    weight: 100
  port:
    targetPort: 8080
